@@ -1,17 +1,29 @@
 package org.opencds.cqf.fhir.cr.plandefinition.apply;
 
-import static org.junit.Assert.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
+import static org.opencds.cqf.fhir.utility.Constants.CQF_APPLICABILITY_BEHAVIOR;
 
 import ca.uhn.fhir.context.FhirVersionEnum;
-import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import org.hl7.fhir.instance.model.api.IBaseBackboneElement;
+import org.hl7.fhir.r4.model.BooleanType;
+import org.hl7.fhir.r4.model.CodeType;
 import org.hl7.fhir.r4.model.Expression;
 import org.hl7.fhir.r4.model.PlanDefinition.ActionConditionKind;
+import org.hl7.fhir.r4.model.PlanDefinition.PlanDefinitionActionComponent;
+import org.hl7.fhir.r4.model.RequestGroup;
+import org.hl7.fhir.r4.model.RequestGroup.RequestGroupActionComponent;
+import org.hl7.fhir.r4.model.StringType;
+import org.hl7.fhir.r5.model.RequestOrchestration.RequestOrchestrationActionComponent;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -21,8 +33,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.opencds.cqf.cql.engine.model.ModelResolver;
 import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.cql.LibraryEngine;
+import org.opencds.cqf.fhir.cr.common.IInputParameterResolver;
 import org.opencds.cqf.fhir.cr.helpers.RequestHelpers;
-import org.opencds.cqf.fhir.cr.inputparameters.IInputParameterResolver;
 import org.opencds.cqf.fhir.cr.questionnaire.generate.GenerateProcessor;
 
 @ExtendWith(MockitoExtension.class)
@@ -60,23 +72,21 @@ class ProcessActionTests {
     void dstu3Request() {
         var action = new org.hl7.fhir.dstu3.model.PlanDefinition.PlanDefinitionActionComponent();
         var requestAction = fixture.generateRequestAction(FhirVersionEnum.DSTU3, action);
-        assertTrue(requestAction instanceof org.hl7.fhir.dstu3.model.RequestGroup.RequestGroupActionComponent);
+        assertInstanceOf(org.hl7.fhir.dstu3.model.RequestGroup.RequestGroupActionComponent.class, requestAction);
     }
 
     @Test
     void r4Request() {
         var action = new org.hl7.fhir.r4.model.PlanDefinition.PlanDefinitionActionComponent();
         var requestAction = fixture.generateRequestAction(FhirVersionEnum.R4, action);
-        assertTrue(requestAction instanceof org.hl7.fhir.r4.model.RequestGroup.RequestGroupActionComponent);
+        assertInstanceOf(RequestGroupActionComponent.class, requestAction);
     }
 
     @Test
     void r5Request() {
         var action = new org.hl7.fhir.r5.model.PlanDefinition.PlanDefinitionActionComponent();
         var requestAction = fixture.generateRequestAction(FhirVersionEnum.R5, action);
-        assertTrue(
-                requestAction
-                        instanceof org.hl7.fhir.r5.model.RequestOrchestration.RequestOrchestrationActionComponent);
+        assertInstanceOf(RequestOrchestrationActionComponent.class, requestAction);
     }
 
     @Test
@@ -106,7 +116,7 @@ class ProcessActionTests {
                 FhirVersionEnum.R4, libraryEngine, null, inputParameterResolver);
         doThrow(new IllegalArgumentException())
                 .when(libraryEngine)
-                .resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), eq(null));
+                .resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), eq(null), eq(null), any(), eq(null));
         fixture.meetsConditions(request, action);
         var oc = (org.hl7.fhir.r4.model.OperationOutcome) request.getOperationOutcome();
         assertTrue(oc.hasIssue());
@@ -123,9 +133,11 @@ class ProcessActionTests {
         action.addCondition().setKind(ActionConditionKind.APPLICABILITY).setExpression(expression);
         var request = RequestHelpers.newPDApplyRequestForVersion(
                 FhirVersionEnum.R4, libraryEngine, null, inputParameterResolver);
-        doReturn(null).when(libraryEngine).resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), eq(null));
+        doReturn(null)
+                .when(libraryEngine)
+                .resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), any(), eq(null), any(), eq(null));
         var result = fixture.meetsConditions(request, action);
-        assertFalse(result);
+        Assertions.assertFalse(result);
         assertNull(request.getOperationOutcome());
     }
 
@@ -136,11 +148,68 @@ class ProcessActionTests {
         action.addCondition().setKind(ActionConditionKind.APPLICABILITY).setExpression(expression);
         var request = RequestHelpers.newPDApplyRequestForVersion(
                 FhirVersionEnum.R4, libraryEngine, null, inputParameterResolver);
-        doReturn(Arrays.asList(new org.hl7.fhir.r4.model.StringType("Test")))
+        doReturn(List.of(new StringType("Test")))
                 .when(libraryEngine)
-                .resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), eq(null));
+                .resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), any(), eq(null), any(), eq(null));
         var result = fixture.meetsConditions(request, action);
-        assertFalse(result);
+        Assertions.assertFalse(result);
         assertNull(request.getOperationOutcome());
+    }
+
+    org.hl7.fhir.r4.model.PlanDefinition.PlanDefinitionActionComponent actionWithChildren() {
+        var action = new org.hl7.fhir.r4.model.PlanDefinition.PlanDefinitionActionComponent();
+        action.setId("action1");
+        var expression = new Expression().setLanguage("text/cql-expression").setExpression("1 = 1");
+        var childAction1 = new PlanDefinitionActionComponent();
+        childAction1.setId("child1");
+        childAction1.addCondition().setKind(ActionConditionKind.APPLICABILITY).setExpression(expression);
+        var childAction2 = new PlanDefinitionActionComponent();
+        childAction2.setId("child2");
+        childAction2.addCondition().setKind(ActionConditionKind.APPLICABILITY).setExpression(expression);
+        var childAction3 = new PlanDefinitionActionComponent();
+        childAction3.setId("child3");
+        childAction3.addCondition().setKind(ActionConditionKind.APPLICABILITY).setExpression(expression);
+        action.setAction(List.of(childAction1, childAction2, childAction3));
+        return action;
+    }
+
+    @Test
+    void testProcessChildActionsApplicabilityBehavior() {
+        var action = actionWithChildren();
+        var requestOrchestration = new RequestGroup();
+        var requestAction = (RequestGroupActionComponent) fixture.generateRequestActionR4(action);
+        var request = RequestHelpers.newPDApplyRequestForVersion(
+                FhirVersionEnum.R4, libraryEngine, null, inputParameterResolver);
+        var metConditions = new HashMap<String, IBaseBackboneElement>();
+        doReturn(List.of(new BooleanType(true)))
+                .when(libraryEngine)
+                .resolveExpression(eq(RequestHelpers.PATIENT_ID), any(), eq(null), any(), eq(null), any(), eq(null));
+        fixture.processChildActions(request, requestOrchestration, metConditions, action, requestAction);
+        assertEquals(3, requestAction.getAction().size());
+
+        requestAction.setAction(null);
+        assertTrue(requestAction.getAction().isEmpty());
+        metConditions = new HashMap<String, IBaseBackboneElement>();
+        action.addExtension(CQF_APPLICABILITY_BEHAVIOR, new CodeType("any"));
+        fixture.processChildActions(request, requestOrchestration, metConditions, action, requestAction);
+        assertEquals(1, requestAction.getAction().size());
+    }
+
+    @Test
+    void testProcessChildActionsDoesNotThrowOnInvalidApplicabilityBehavior() {
+        var action = actionWithChildren();
+        action.addExtension(CQF_APPLICABILITY_BEHAVIOR, new BooleanType(true));
+        var requestOrchestration = new RequestGroup();
+        var requestAction = (RequestGroupActionComponent) fixture.generateRequestActionR4(action);
+        var request = RequestHelpers.newPDApplyRequestForVersion(
+                FhirVersionEnum.R4, libraryEngine, null, inputParameterResolver);
+        var metConditions = new HashMap<String, IBaseBackboneElement>();
+        fixture.processChildActions(request, requestOrchestration, metConditions, action, requestAction);
+        assertTrue(requestAction.getAction().isEmpty());
+
+        action.setExtension(null);
+        action.addExtension(CQF_APPLICABILITY_BEHAVIOR, new CodeType("bad"));
+        fixture.processChildActions(request, requestOrchestration, metConditions, action, requestAction);
+        assertTrue(requestAction.getAction().isEmpty());
     }
 }
