@@ -2,7 +2,9 @@ package org.opencds.cqf.fhir.utility.adapter.r4;
 
 import ca.uhn.fhir.rest.server.exceptions.UnprocessableEntityException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import org.hl7.fhir.instance.model.api.IBaseParameters;
@@ -13,6 +15,7 @@ import org.hl7.fhir.r4.model.Attachment;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.DataRequirement;
+import org.hl7.fhir.r4.model.DataRequirement.DataRequirementCodeFilterComponent;
 import org.hl7.fhir.r4.model.Library;
 import org.hl7.fhir.r4.model.ParameterDefinition;
 import org.hl7.fhir.r4.model.Parameters;
@@ -20,8 +23,10 @@ import org.hl7.fhir.r4.model.Parameters.ParametersParameterComponent;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.RelatedArtifact;
 import org.hl7.fhir.r4.model.UriType;
+import org.opencds.cqf.fhir.api.Repository;
 import org.opencds.cqf.fhir.utility.Constants;
 import org.opencds.cqf.fhir.utility.adapter.DependencyInfo;
+import org.opencds.cqf.fhir.utility.adapter.IDataRequirementAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IDependencyInfo;
 import org.opencds.cqf.fhir.utility.adapter.ILibraryAdapter;
 
@@ -59,7 +64,7 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
     @SuppressWarnings("unchecked")
     @Override
     public List<Attachment> getContent() {
-        return getLibrary().getContent().stream().collect(Collectors.toList());
+        return getLibrary().getContent().stream().toList();
     }
 
     @Override
@@ -83,10 +88,10 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
         // relatedArtifact[].resource
         getRelatedArtifact().stream()
                 .map(ra -> (RelatedArtifact) ra)
-                .filter(ra -> ra.hasResource())
+                .filter(RelatedArtifact::hasResource)
                 .map(ra -> DependencyInfo.convertRelatedArtifact(ra, referenceSource))
                 .forEach(references::add);
-        getLibrary().getDataRequirement().stream().forEach(dr -> {
+        getLibrary().getDataRequirement().forEach(dr -> {
             // dataRequirement[].profile[]
             dr.getProfile().stream()
                     .filter(IPrimitiveType::hasValue)
@@ -94,11 +99,25 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
                             referenceSource, profile.getValue(), profile.getExtension(), profile::setValue)));
             // dataRequirement[].codeFilter[].valueSet
             dr.getCodeFilter().stream()
-                    .filter(cf -> cf.hasValueSet())
+                    .filter(DataRequirementCodeFilterComponent::hasValueSet)
                     .forEach(cf -> references.add(
                             new DependencyInfo(referenceSource, cf.getValueSet(), cf.getExtension(), cf::setValueSet)));
         });
         return references;
+    }
+
+    @Override
+    public Map<String, String> getReferencedLibraries() {
+        var map = new HashMap<String, String>();
+        map.put(getName(), getCanonical());
+        return map;
+    }
+
+    @Override
+    public Map<String, ILibraryAdapter> retrieveReferencedLibraries(Repository repository) {
+        var map = new HashMap<String, ILibraryAdapter>();
+        map.put(getName(), this);
+        return map;
     }
 
     @SuppressWarnings("unchecked")
@@ -129,10 +148,16 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
         return getLibrary().getParameter();
     }
 
-    @SuppressWarnings("unchecked")
     @Override
-    public List<DataRequirement> getDataRequirement() {
-        return getLibrary().getDataRequirement();
+    public boolean hasDataRequirement() {
+        return getLibrary().hasDataRequirement();
+    }
+
+    @Override
+    public List<IDataRequirementAdapter> getDataRequirement() {
+        return getLibrary().getDataRequirement().stream()
+                .map(DataRequirementAdapter::new)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -160,8 +185,9 @@ public class LibraryAdapter extends KnowledgeArtifactAdapter implements ILibrary
                         return getLibrary().getContained().stream()
                                 .filter(containedResource ->
                                         containedResource.getId().equals(ref))
+                                .filter(IBaseParameters.class::isInstance)
+                                .map(IBaseParameters.class::cast)
                                 .findFirst()
-                                .map(r -> (IBaseParameters) r)
                                 .orElse(null);
                     }
                     return null;
